[package]
name = "web_scraper_adv"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.11.10", features = ["blocking"] }
scraper = "0.13.0"
select = "0.5.0"
colored = "2"
prettytable-rs = "0.8.0"